Depend on xmlpull-xpp3 1.2 from https://github.com/xmlpull-xpp3/xmlpull-xpp3
(cherry picked from commit 754d42301c65718524d87cd6e3d3db9f83fde29d)